--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
 </head>
 <body>
-    
+    <a>Edited</a>
     <p>Đây là một đoạn văn bản, Ta có thể <strong>in đậm</strong> , <i>in nghiêng</i> , <u> gạch chân</u> ,<strike>gạch ngang</strike>  </p>
     <hr>
     hoặc để nhấn mạnh điều gì đó ta làm như <em>thế này hihi</em>
